# game

./: .axproj  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  run.bat  run.bat.in  setup.ps1
.github/workflows/: build-all.yml  build-android.yml  build-ios.yml  build-linux.yml  build-macos.yml  build-windows.yml  build.yml
Source/: AppDelegate.cpp  AppDelegate.h  Includes.hpp  LoadingLayer.cpp  LoadingLayer.h  MenuLayer.cpp  MenuLayer.h
Source/devtools/: DevTools.cpp  DevTools.h
Source/dialog/: DialogLayer.cpp  DialogLayer.h  DialogManager.cpp  DialogManager.h  DialogTypes.h
Source/extras/: LayoutMenu.cpp  LayoutMenu.h  MenuItemExtra.cpp  MenuItemExtra.h
Source/layers/: LoadingLayer.cpp  LoadingLayer.h  MenuLayer.cpp  MenuLayer.h  ProgressionLayer.cpp  ProgressionLayer.h  SavePickerLayer.cpp  SavePickerLayer.h
Source/managers/: DiscordManager.cpp  DiscordManager.h  GameManager.cpp  GameManager.h  LocalisationManager.cpp  LocalisationManager.h  SaveManager.cpp  SaveManager.h
Source/utils/: InputManager.cpp  InputManager.h  ModToggleManager.cpp  ModToggleManager.h  Starfield.cpp  Starfield.h
axmol/: .gitignore
axmol/cmake/Modules/: AXBuildHelpers.cmake
axmol/core/: axmolver.h
axmol/core/2d/: Label.cpp
axmol/core/audio/: AudioEngine.cpp  AudioEngine.h
axmol/core/platform/win32/: Application-win32.h
axmol/extensions/Inspector/src/Inspector/: Inspector.cpp  Inspector.h
cmake/modules/: AXGameEngineOptions.cmake  AXGamePlatformSetup.cmake
proj.android/: settings.gradle
proj.android/app/: AndroidManifest.xml
proj.android/app/res/values/: strings.xml
proj.win32/: main.cpp
proj.winrt/: App.xaml  Package.appxmanifest
